testdata/errors/import_cycle/b.spy
import a

def g() -> int:
    return 2
